Declarative Resource Management /Simple-app/EXAMPLE-01/Base/Namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  creationTimestamp: null
  name: bibek-app
spec: {}
status: {}
~
