Declarative Resource Management /Simple-app/EXAMPLE-01/Base/service.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: bibek-svc
  name: bibek-svc
spec:
  ports:
  - name: 8080-8080
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: bibek-svc
  type: ClusterIP
status:
  loadBalancer: {}
