Declarative Resource Management /Simple-app/EXAMPLE-01/Base/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  creationTimestamp: null
  labels:
    app: bibek-svc
  name: bibek-svc
spec:
  host: bibek-test.apps.cluster-rx9gw.sandbox3008.opentlc.com
  port:
    targetPort: 8080-8080
  to:
    kind: ""
    name: bibek-svc
    weight: null
status: {}
